# alive-ai

./: .gitignore  .npmignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  manifest.md  package.json  pyproject.toml  requirements.txt  update_v2.html
alive_ai/: __init__.py
benchmarks/: report.html  run_benchmarks.py
brain/: __init__.py  almost_said.py  bid_detector.py  conversation_flow.py  curiosity.py  default_mode.py  dreams.py  emotional_memory.py  global_activity.py  group_dynamics.py  linguistic.py  manifest.md  narrative.py
cli/: check_webui_static.js  index.js  tui.js
config/: directives.example.json  instructions.example.md  self.example.json  settings.example.json
core/: behavioral_pressure.py  body_snapshot.py  boundary_governor.py  config.py  directives.py  event_types.py  events.py  follow_up.py  hot_reload.py  initialization.py  inner_state.py  manifest.md  media_handler.py  memory_monitor.py  message_handler.py  paths.py  plugin_registry.py  proactive_arbiter.py  proactive_generator.py  proactive_safety.py  reflection.py  response_texture.py  self.py  settings.py  skills_registry.py  state.py  subconscious_bridge.py  thinking.py  user_manager.py  user_tracker.py
demo/: index.html
docs/: dashboard.html  index.html
heart/: __init__.py  afterglow.py  appraisal.py  attachment.py  circadian.py  complex_emotions.py  conflicts.py  core.py  emotional_decay.py  emotional_memory.py  emotional_state.py  emotional_variability.py  hormonal.py  inconsistency.py  integrity.py  interoception.py  love.py  manifest.md  (+9 more)
(+171 files in other folders)
