[project]
name = "alive-ai-runtime"
version = "0.1.6"
description = "Local-first emotional AI runtime with memory, impulses, and a live dashboard."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Vindepemarte" }]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = [
  "alive_ai*",
  "brain*",
  "core*",
  "heart*",
  "input*",
  "output*",
  "skills*",
  "webui*"
]
